# Freesia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Freesia/: CMakeLists.txt
Freesia/src/: Freesia.h
Freesia/src/Freesia/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
Freesia/src/Freesia/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Freesia/src/Freesia/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Freesia/src/Freesia/Math/: Math.cpp  Math.h
Freesia/src/Freesia/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Freesia/src/Freesia/Scene/: AssimpEntity.cpp  AssimpEntity.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Freesia/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Freesia/src/Platform/X11/: X11Input.cpp  X11Window.cpp  X11Window.h
Freesia/src/Platform/x11/: X11Window.cpp  X11Window.h
Sandbox/assets/models/stylized_treasure_chest/: license.txt  scene.gltf
Sandbox/assets/scenes/: Example.freesia
Sandbox/assets/shaders/: Model3D.glsl
Sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxApp.cpp
Sandbox/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
